feat: взаимодействие с тегами
